# emcc-wrapper

./: .clang-format  CMakeLists.txt  wrapper.c
